tests/phl/fail/0001-fundef.ec
lemma foo : true.
proof -strict.
 proc.
